katars/tests/snapshots/snapshots__error_unknown_module.snap
---
source: katars/tests/snapshots.rs
expression: output
---
Error: unknown module 'std.nonexistent'
   ╭─[<test>:1:1]
   │
 1 │ import std.nonexistent
   │ ───────────┬──────────  
   │            ╰──────────── unknown module 'std.nonexistent'
───╯
